--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       EULA: "TRUE"
       TYPE: "QUILT"
-      MODRINTH_PROJECTS: "fabric-api,better-fabric-console,mods-command,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,tabtps,debugify,thorium,clean-logs,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,carpetskylands"
+      MODRINTH_PROJECTS: "fabric-api,better-fabric-console,mods-command,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,tabtps,debugify,thorium,clean-logs,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder"
     volumes:
       - ./data:/data
 
