--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       EULA: "TRUE"
       TYPE: "QUILT"
-      MODRINTH_PROJECTS: "fabric-api,better-fabric-console,mods-command,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,tabtps,debugify,thorium,clean-logs,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder"
+      MODRINTH_PROJECTS: "fabric-api,fastback,multiworld,better-fabric-console,mods-command,luckperms,player-roles,factions,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,bmarker,holograms,refined-advancements,tabtps,debugify,thorium,clean-logs,mod-loading-screen,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,scarpet-graphics,slumber,essentialaddons,huskhomes,discarpet,mcdiscordchat,multitool,starter-kit,no-hostiles-around-campfire,kiwi,companion,cycle-paintings,inventory-essentials,compass-commands,audioplayer,betterleads,directionhud,skylands,highspeed-rail"
     volumes:
       - ./data:/data
 
