--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       EULA: "TRUE"
       TYPE: "QUILT"
       REMOVE_OLD_MODS: "TRUE"
-      MODRINTH_PROJECTS: "lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,fabric-api,fastback,multiworld,better-fabric-console,mods-command,luckperms,player-roles,factions,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,refined-advancements,tabtps,debugify,thorium,clean-logs,huskhomes,multitool,skylands,highspeed-rail,starter-kit,no-hostiles-around-campfire,kiwi,companion,cycle-paintings,inventory-essentials,compass-commands,audioplayer,betterleads,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons"
+      MODRINTH_PROJECTS: "fabric-api,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,debugify,thorium,clean-logs,fastback,multiworld,better-fabric-console,mods-command,luckperms,player-roles,factions,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,refined-advancements,tabtps,huskhomes,multitool,skylands,highspeed-rail,starter-kit,cycle-paintings,inventory-essentials,compass-commands"
     volumes:
       - ./data:/data
 
