--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       EULA: "TRUE"
       TYPE: "QUILT"
       REMOVE_OLD_MODS: "TRUE"
-      MODRINTH_PROJECTS: "fabric-api,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,debugify"
+      MODRINTH_PROJECTS: "fabric-api,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,debugify,clean-logs,fastback,multiworld,better-fabric-console"
     volumes:
       - ./data:/data
 
