--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,11 @@ services:
       MOTD: ""
       ICON: ""
       MAX_PLAYERS: "50"
-      OPS: "crazymolerat,Grumpst3r"
-      ONLINE_MODE: "FALSE"
+      OPS: "crazymolerat,Grumpst3r,feralkittybeans"
+      ENABLE_WHITELIST: "TRUE"
+      WHITELIST: "crazymolerat,Grumpst3r,feralkittybeans"
+      WHITELIST_FILE: "/extra/whitelist.json"
+      ONLINE_MODE: "TRUE"
       SNOOPER_ENABLED: "FALSE"
       REMOVE_OLD_MODS: "TRUE"
       MODRINTH_PROJECTS: "fabric-api,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons,discarpet,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,debugify,clean-logs,fastback,multiworld,skylands,better-fabric-console,mods-command,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,refined-advancements,tabtps,multitool,highspeed-rail,starter-kit,no-hostiles-around-campfire,kiwi,companion,cycle-paintings,compass-commands,cc-tweaked,calibrated,advanced-networking,sc-peripherals,weather-detector,omnihopper,fabric-language-kotlin,yacg,audioplayer,betterleads"
@@ -28,6 +31,7 @@ services:
       ANNOUNCE_PLAYER_ACHIEVEMENTS: "TRUE"
       MODE: "survival"
       FORCE_GAMEMODE: "FALSE"
+      DIFFICULTY: "hard"
       PVP: "FALSE"
       SPAWN_PROTECTION: "9"
       ALLOW_NETHER: "TRUE"
