--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       MOTD: ""
       ICON: ""
       MAX_PLAYERS: "50"
+      MEMORY: "8G"
       OPS: "crazymolerat,Grumpst3r,feralkittybeans"
       ENABLE_WHITELIST: "TRUE"
       WHITELIST: "crazymolerat,Grumpst3r,feralkittybeans"
@@ -21,7 +22,8 @@ services:
       REMOVE_OLD_MODS: "TRUE"
       MODRINTH_PROJECTS: "fabric-api,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons,discarpet,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,debugify,clean-logs,fastback,multiworld,skylands,better-fabric-console,mods-command,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,refined-advancements,tabtps,multitool,highspeed-rail,starter-kit,no-hostiles-around-campfire,kiwi,companion,cycle-paintings,compass-commands,cc-tweaked,calibrated,advanced-networking,sc-peripherals,weather-detector,omnihopper,fabric-language-kotlin,yacg,audioplayer,betterleads"
       VANILLATWEAKS_SHARECODE: ""
-      ENABLE_QUERY: "true"
+      ENABLE_JMX: "TRUE"
+      ENABLE_QUERY: "TRUE"
       ENABLE_RCON: "TRUE"
       RCON_PASSWORD: "testing"
       RCON_PORT: 25575
