--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,32 @@ package-lock.json
 
 # docker
 .docker
+
+# minecraft
+## allow
+!server.properties
+!whitelist.json
+!ops.json
+!banned-ips.json
+!banned-players.json
+
+## ignore
+.vanillatweaks-manifest.json
+.modrinth-manifest.json
+.rcon-cli.env
+eula.txt
+quilt-installer-0.5.0.jar
+quilt-server-1.19.4-0.19.0-beta.13-launch.jar
+quilt-server-launcher.properties
+server.jar
+usercache.json
+better-fabric-console
+config
+libraries
+logs
+mods
+plugins
+versions
+world
+resourcepacks
+.cache
