--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       # is referring to the hostname of 'mc' compose service below
       RWA_RCON_HOST: mc
       # needs to match the password configured for the container, which is 'minecraft' by default
-      RWA_RCON_PASSWORD: minecraft
+      RWA_RCON_PASSWORD: "testing"
     volumes:
       - /opt/rcon-web-admin/db:/rwa-db
   mc:
@@ -63,7 +63,7 @@ services:
       SPAWN_NPCS: "TRUE"
       EULA: "TRUE"
       ENABLE_RCON: "TRUE"
-      RCON_PASSWORD: minecraft
+      RCON_PASSWORD: "testing"
       RCON_PORT: 25575
       BROADCAST_RCON_TO_OPS: "TRUE"
       BROADCAST_CONSOLE_TO_OPS: "TRUE"
