--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,14 @@ services:
       # is referring to the hostname of 'mc' compose service below
       RWA_RCON_HOST: mc
       # needs to match the password configured for the container, which is 'minecraft' by default
-      RWA_RCON_PASSWORD: "testing"
+      RWA_RCON_PASSWORD: testing
     volumes:
       - /opt/rcon-web-admin/db:/rwa-db
   mc:
     image: itzg/minecraft-server
     ports:
       - 25565:25565
-      - 25575:25575
+      - 28016:28016
     environment:
       VERSION: "1.19.4"
       TYPE: "QUILT"
@@ -64,7 +64,7 @@ services:
       EULA: "TRUE"
       ENABLE_RCON: "TRUE"
       RCON_PASSWORD: "testing"
-      RCON_PORT: 25575
+      RCON_PORT: 28016
       BROADCAST_RCON_TO_OPS: "TRUE"
       BROADCAST_CONSOLE_TO_OPS: "TRUE"
       RCON_CMDS_STARTUP:  |-
