update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
       MEMORY: "8G"
       INIT_MEMORY: "4G"
       MAX_MEMORY: "8G"
-      OPS: ""
+      OPS: "crazymolerat,Grumpst3rr,feralkittybeans"
       OPS_FILE: "/data/ops.sjon"
       ENABLE_WHITELIST: "TRUE"
-      WHITELIST: ""
+      WHITELIST: "crazymolerat,Grumpst3rr,feralkittybeans"
       WHITELIST_FILE: "/data/whitelist.json"
       ONLINE_MODE: "TRUE"
       SNOOPER_ENABLED: "FALSE"
