--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,8 @@ services:
       MEMORY: "8G"
       INIT_MEMORY: "4G"
       MAX_MEMORY: "8G"
-      OPS: "crazymolerat,Grumpst3rr,feralkittybeans"
-      OPS_FILE: "/data/ops.sjon"
+      OPS_FILE: "/data/ops.json"
       ENABLE_WHITELIST: "TRUE"
-      WHITELIST: "crazymolerat,Grumpst3rr,feralkittybeans"
       WHITELIST_FILE: "/data/whitelist.json"
       ONLINE_MODE: "TRUE"
       SNOOPER_ENABLED: "FALSE"
@@ -53,18 +51,14 @@ services:
       BROADCAST_RCON_TO_OPS: "TRUE"
       BROADCAST_CONSOLE_TO_OPS: "TRUE"
       RCON_CMDS_STARTUP:  |-
-        /pregen start 200
         /backup enable
         /backup set-shutdown-action full-gc
         /backup set-autoback-action full
         /backup set-autoback-wait 360
         /backup set-retention gfs
         /backup set-remote https://github.com/nap01/mc-bak1
-      RCON_CMDS_FIRST_CONNECT: |-
-        /pregen stop
       RCON_CMDS_LAST_DISCONNECT: |-
         /kill @e[type=minecraft:boat]
-        /pregen start 200
     volumes:
       - ./data:/data
     tty: true
