--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       RCON_PORT: 25575
       BROADCAST_RCON_TO_OPS: "TRUE"
       BROADCAST_CONSOLE_TO_OPS: "TRUE"
-      RCON_CMDS_STARTUP:  |-
+      RCON_CMDS_FIRST_CONNECT:  |-
         /backup enable
         /backup set-shutdown-action full-gc
         /backup set-autoback-action full
