--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -32,8 +32,10 @@ services:
       ENABLE_COMMAND_BLOCK: "TRUE"
       ANNOUNCE_PLAYER_ACHIEVEMENTS: "TRUE"
       MODE: "creative"
+      LEVEL_TYPE: "flat"
+      GENERATOR_SETTINGS: "minecraft:bedrock,3*minecraft:stone,52*minecraft:sandstone,minecraft:desert"
       FORCE_GAMEMODE: "FALSE"
-      DIFFICULTY: "hard"
+      DIFFICULTY: "normal"
       PVP: "FALSE"
       SPAWN_PROTECTION: "9"
       ALLOW_NETHER: "TRUE"
