--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       ONLINE_MODE: "TRUE"
       SNOOPER_ENABLED: "FALSE"
       REMOVE_OLD_MODS: "FALSE"
-      MODRINTH_PROJECTS: "fabric-api,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons,discarpet,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,debugify,clean-logs,fastback,multiworld,skylands,better-fabric-console,mods-command,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,refined-advancements,tabtps,multitool,highspeed-rail,starter-kit,no-hostiles-around-campfire,kiwi,companion,cycle-paintings,compass-commands,cc-tweaked,calibrated,advanced-networking,sc-peripherals,weather-detector,omnihopper,fabric-language-kotlin,yacg,audioplayer,betterleads,chunk-loaders,tesseract,redstone-multimeter,moving-elevators,rainbow-lamp,fabricautocrafter,wormhole,travelersbackpack,plethora-peripherals,trinkets,simply-caterpillar,supermartijn642s-config-lib,supermartijn642s-core-lib"
-      VANILLATWEAKS_SHARECODE: "y4czps"
+      MODRINTH_PROJECTS: "fabric-api,carpet,carpet-extra,carpet-fixes,carpetgamerules,subtick,carpet-sky-additions,slumber,essentialaddons,discarpet,lithium,starlight,ferrite-core,memoryleakfix,lazydfu,c2me-fabric,fastload,chunky,chunkyborder,debugify,clean-logs,fastback,multiworld,skylands,better-fabric-console,mods-command,suggestion-tweaker,styled-chat,styledplayerlist,afkdisplay,directionhud,refined-advancements,tabtps,multitool,highspeed-rail,starter-kit,no-hostiles-around-campfire,kiwi,companion,cycle-paintings,compass-commands,cc-tweaked,calibrated,advanced-networking,sc-peripherals,weather-detector,omnihopper,fabric-language-kotlin,yacg,audioplayer,betterleads,supermartijn642s-config-lib,supermartijn642s-core-lib,chunk-loaders,tesseract,redstone-multimeter,moving-elevators,rainbow-lamp,fabricautocrafter,wormhole,travelersbackpack,simply-caterpillar"
+      VANILLATWEAKS_SHARECODE: "PWxtRw"
       USE_AIKAR_FLAGS: "TRUE"
       LOG_TIMESTAMP: "TRUE"
       ENABLE_JMX: "TRUE"
