--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       PVP: "FALSE"
       SPAWN_PROTECTION: "9"
       ALLOW_NETHER: "TRUE"
-      GENERATE_STRUCTURES: "TRUE"
+      GENERATE_STRUCTURES: "FALSE"
       MAX_TICK_TIME: "-1"
       SPAWN_ANIMALS: "TRUE"
       SPAWN_MONSTERS: "TRUE"
