update remote repo with local files

--- a/test/.env
+++ b/test/.env
@@ -1,1 +1,4 @@
-CF_API_KEY=
+WHITELIST="crazymolerat,Grumpst3rr,feralkittybeans"
+OPS="crazymolerat,Grumpst3rr,feralkittybeans"
+RCON_PASS="testing"
+CF_API_KEY="null"
